# Water-Graphene-Binary

./: CMakeLists.txt  README.md  distribution.ods  format_switch_1.py  format_switch_2.py
9a5/: 1sumpre.sh  Cavity.cpp  H-Bond_Hdonor_index_forH1H2_read.cpp  H-Bond_by_z.cpp  H-Bond_transitionCV_getzeropoint.cpp  H-Bond_with_transition.cpp  H_BOND  H_BOND.cpp  H_BOND_distribution  H_BOND_distribution.cpp  H_BOND_distribution_O2.cpp  H_Bond  H_Bond_H1H2.cpp  Hbond_transition_averHbond_UL.cpp  Hbond_x_z_transiton_correlation.cpp  Rapid_size_change  calc_cavity  cavity  cavity_jump_correlation.cpp  cavity_lifetime.ods  cavity_size_over_water.cpp  cavity_size_over_water_dummy.cpp  cavitysize_over_wat_with_transition.cpp  cxx_diffusion  cxx_diffusion.cpp  data_diffusion  density_dis9a5_11.out  density_dis9a5_12.out  density_dis9a5_14.rst7  density_dis9a5_17.rst7  density_dis9a5_2.out  density_dis9a5_2.rst7  density_dis9a5_3.out  density_dis9a5_3.rst7  find_jump  find_jump.cpp  find_jump_coor_reverse_startpoint  find_jump_reverse.cpp  find_jump_reverse_start.cpp  format_translation_frame-nc.cpp  (+18 more)
9a5/0a25ps/: density_dis9a5_11.rst7  density_dis9a5_12.rst7  density_dis9a5_13.rst7  density_dis9a5_15.rst7  density_dis9a5_18.out  density_dis9a5_18.rst7  density_dis9a5_19.out  density_dis9a5_19.rst7
9a5/Analysis/: Batch_analysis.cpp  Configurations&Functions.hpp  Diffusion_HBNum_test.hpp  ExtractInterlayerHBondExchangeData.cpp  ExtractInterlayerTransportTimeSeriesData.hpp  H-Bond_with_transition.cpp  H_BOND_distribution.hpp  Hbond_transition_averHbond_UL.cpp  Rotation_Relaxation&Diffusion_test.hpp  Rotation_Relaxation_HBNum_test.hpp  RotationalRelaxation&DiffusionByCluster.hpp  Rotational_Relaxation& Diffusion_HBNum.hpp  cavity_jump_correlation.cpp  cavity_size_change-distribution.cpp  dangling_distribution.cpp  extract_interlayer_transport_old.cpp  format_convert_frame-nc.cpp  output_z_trajectory.cpp  parameters_time_evolution.cpp  z_distribution_WAT.cpp  z_distribution_wat.cpp
9a5/H-Bond/: H1H2_t_Hbond_layerexchange_correlationfunction_test  H1H2_t_averHbondnum_cutoff1a2_up  H1H2_t_averHbondnum_cutoff1a2_up_test  H1H2_t_averHbondnum_cutoff_up  H1H2_z_averHbondnum_cutoff1a2_up  H1H2_z_averHbondnum_cutoff1a2_up_test  H1H2_z_averHbondnum_cutoff1a3  H1H2_z_averHbondnum_cutoff_up  H1_z_averHbondnum_cutoff1a3_lowerlayer  H1_z_averHbondnum_cutoff1a3_upperlayer  H2_z_averHbondnum_cutoff1a3_lowerlayer  H2_z_averHbondnum_cutoff1a3_upperlayer  HBond_with_transition  H_Bond_O_index_transition_donor_down_1a2_1  H_Bond_O_index_transition_donor_up_1a2_1  H_Bond_O_index_transition_donor_up_1a2_4  H_Bond_O_index_transition_donor_up_zeropoint  H_Bond_O_index_transition_donor_up_zeropoint_1a2  H_Bond_O_index_transition_donor_up_zeropoint_1a2_narrow  H_Bond_by_z_H  H_Bond_by_z_O  H_Bond_o_index_transition_donor_up_zeropoint  H_Bond_with_transition  H_Bond_with_transition_H  H_Bond_with_transition_H_1a3  H_Bond_with_transition_O  H_Bond_with_transition_O_1a3  average_Hbond_num_ULlayer_allwat  average_Hbond_num_ULlayer_transitionpath
9a5/cavity-jump_correlation/: density_distribution_before_and_after_jump
9a5/cavity_feature/: cavity_lifetime
9a5/enthaply/: H_generate_pdb.cpp  H_generate_rst7.cpp  cnt.frcmod  find_VDWAALS_EELEC.sh  find_confined_wat_vdw.sh  find_eptot.sh  generate_pdb.py  generate_pdb_rst7  generate_pdb_rst7.cpp  generate_pdb_rst7_for_confinedwater  generate_pdb_rst7_for_confinedwater.cpp  graphene.lib  wat_c_pdb  wat_confined_pdb
9a5/for_Node/: NVT_entropy.in  correlation.lsf  jump.lsf  jump_time.lsf  sumpre.sh
9a5/jump/: H1H2_t_averangle_zaxis_cutoff1a2_up_test  H1H2_t_averangle_zaxis_cutoff_up  H1H2_t_averz_cutoff1a2_up_test  H1H2_t_averz_cutoff_up  find_jump.cpp  find_jump_coor  find_jump_coor_down  find_jump_coor_up  jump_time_distribution.cpp  stable_time  stable_time_1a3  stable_time_1a3_80fs  stabletime_distribution_by_z  (+3 more)
water/: Find_cavity_in_bulk_water.cpp  amber_netcdf.hpp  amber_parm_1.0.hpp
water_period/: HB_network.cpp  Identification_of_grid_water.hpp
(+998 files in other folders)
